10/error.txt
em++ -c -fPIC -O3 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -s ALLOW_MEMORY_GROWTH=1 -Wall -Wextra -Wdate-time -Winconsistent-missing-override -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_EGL_NO_X11 -DQT_NO_FOREACH -DQT_DEPRECATED_WARNINGS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_STATICPLUGIN -DQT_PLUGIN -DQT_EVENTDISPATCHER_SUPPORT_LIB -DQT_FONTDATABASE_SUPPORT_LIB -DQT_EGL_SUPPORT_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_PLUGIN_RESOURCE_INIT_FUNCTION=qwasm_plugin_resource_init -I. -I../../../../include -I../../../../include/QtEventDispatcherSupport -I../../../../include/QtEventDispatcherSupport/5.14.2 -I../../../../include/QtEventDispatcherSupport/5.14.2/QtEventDispatcherSupport -I../../../../include/QtFontDatabaseSupport -I../../../../include/QtFontDatabaseSupport/5.14.2 -I../../../../include/QtFontDatabaseSupport/5.14.2/QtFontDatabaseSupport -I../../../../include/QtEglSupport -I../../../../include/QtEglSupport/5.14.2 -I../../../../include/QtEglSupport/5.14.2/QtEglSupport -I../../../../include/QtGui/5.14.2 -I../../../../include/QtGui/5.14.2/QtGui -I../../../../include/QtGui -I../../../../include/QtCore/5.14.2 -I../../../../include/QtCore/5.14.2/QtCore -I../../../../include/QtCore -I.moc -I../../../../mkspecs/wasm-emscripten -o .obj/qwasmservices.o qwasmservices.cpp
em++ -c -fPIC -O3 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -s ALLOW_MEMORY_GROWTH=1 -Wall -Wextra -Wdate-time -Winconsistent-missing-override -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_EGL_NO_X11 -DQT_NO_FOREACH -DQT_DEPRECATED_WARNINGS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_STATICPLUGIN -DQT_PLUGIN -DQT_EVENTDISPATCHER_SUPPORT_LIB -DQT_FONTDATABASE_SUPPORT_LIB -DQT_EGL_SUPPORT_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_PLUGIN_RESOURCE_INIT_FUNCTION=qwasm_plugin_resource_init -I. -I../../../../include -I../../../../include/QtEventDispatcherSupport -I../../../../include/QtEventDispatcherSupport/5.14.2 -I../../../../include/QtEventDispatcherSupport/5.14.2/QtEventDispatcherSupport -I../../../../include/QtFontDatabaseSupport -I../../../../include/QtFontDatabaseSupport/5.14.2 -I../../../../include/QtFontDatabaseSupport/5.14.2/QtFontDatabaseSupport -I../../../../include/QtEglSupport -I../../../../include/QtEglSupport/5.14.2 -I../../../../include/QtEglSupport/5.14.2/QtEglSupport -I../../../../include/QtGui/5.14.2 -I../../../../include/QtGui/5.14.2/QtGui -I../../../../include/QtGui -I../../../../include/QtCore/5.14.2 -I../../../../include/QtCore/5.14.2/QtCore -I../../../../include/QtCore -I.moc -I../../../../mkspecs/wasm-emscripten -o .obj/qwasmoffscreensurface.o qwasmoffscreensurface.cpp
qwasmopenglcontext.cpp:91:16: error: no member named 'preferLowPowerToHighPerformance' in 'EmscriptenWebGLContextAttributes'
    attributes.preferLowPowerToHighPerformance = false;
    ~~~~~~~~~~ ^
1 error generated.
shared:ERROR: '/emsdk_portable/upstream/bin/clang++ -target wasm32-unknown-emscripten -D__EMSCRIPTEN_major__=1 -D__EMSCRIPTEN_minor__=39 -D__EMSCRIPTEN_tiny__=10 -D_LIBCPP_ABI_VERSION=2 -Dunix -D__unix -D__unix__ -Werror=implicit-function-declaration -Xclang -nostdsysteminc -Xclang -isystem/emsdk_portable/upstream/emscripten/system/include/libcxx -Xclang -isystem/emsdk_portable/upstream/emscripten/system/lib/libcxxabi/include -Xclang -isystem/emsdk_portable/upstream/emscripten/system/include/compat -Xclang -isystem/emsdk_portable/upstream/emscripten/system/include -Xclang -isystem/emsdk_portable/upstream/emscripten/system/include/libc -Xclang -isystem/emsdk_portable/upstream/emscripten/system/lib/libc/musl/arch/emscripten -Xclang -isystem/emsdk_portable/upstream/emscripten/system/local/include -Xclang -isystem/emsdk_portable/.data/cache/wasm/include -c -fPIC -O3 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wdate-time -Winconsistent-missing-override -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_EGL_NO_X11 -DQT_NO_FOREACH -DQT_DEPRECATED_WARNINGS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_STATICPLUGIN -DQT_PLUGIN -DQT_EVENTDISPATCHER_SUPPORT_LIB -DQT_FONTDATABASE_SUPPORT_LIB -DQT_EGL_SUPPORT_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_PLUGIN_RESOURCE_INIT_FUNCTION=qwasm_plugin_resource_init -I. -I../../../../include -I../../../../include/QtEventDispatcherSupport -I../../../../include/QtEventDispatcherSupport/5.14.2 -I../../../../include/QtEventDispatcherSupport/5.14.2/QtEventDispatcherSupport -I../../../../include/QtFontDatabaseSupport -I../../../../include/QtFontDatabaseSupport/5.14.2 -I../../../../include/QtFontDatabaseSupport/5.14.2/QtFontDatabaseSupport -I../../../../include/QtEglSupport -I../../../../include/QtEglSupport/5.14.2 -I../../../../include/QtEglSupport/5.14.2/QtEglSupport -I../../../../include/QtGui/5.14.2 -I../../../../include/QtGui/5.14.2/QtGui -I../../../../include/QtGui -I../../../../include/QtCore/5.14.2 -I../../../../include/QtCore/5.14.2/QtCore -I../../../../include/QtCore -I.moc -I../../../../mkspecs/wasm-emscripten -DEMSCRIPTEN -fignore-exceptions qwasmopenglcontext.cpp -Xclang -isystem/emsdk_portable/upstream/emscripten/system/include/SDL -c -o .obj/qwasmopenglcontext.o -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr' failed (1)
make[5]: *** [Makefile:4949: .obj/qwasmopenglcontext.o] Error 1
make[5]: *** Waiting for unfinished jobs....

